--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jest": "jest"
   },
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "axios": "^0.21.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.4",
