docs: update env example file

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,11 @@ PORT=3000
 
 # mongoDB connection string
 MONGO_STRING=
+
+
+HOST=http://localhost:3000
+SWAGGER_HOST=localhost:3000
+
+PAYPAL_SANDBOX_ACCOUNT=
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
